2004-10-15 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * src/gdcmDebug.cxx last ditch attempt to get warning/error messages
    displayed on Win32 when a brutal abort() occurs (because of uncatched
    exception). See TODO new entry of this commit for more on this.
  * TODO added new entry.
  * CLEANUP_ROUND (12) for gdcmPixelConvert (nicotine is my friend stage)
    src/gdcmFile.[cxx|h] and gdcmPixelConvert.[cxx|h]:
    - HandleColor is no longer called from gdcmFile.cxx
    - gdcmPixelConvert.cxx clean up on method arguments and internal
      variable names for semantical coherence.

2004-10-14 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
  * Finished lossless transition, not only do we now read all lossless jpeg
  images, without the need of the Cornwell lib, but we do read them properly now
  * To reduce code (well to avoid code duplication), I defined a common place
  for jpeg read/write: gdcmJpeg.cxx. Now gdcmJpeg[8,12 16] include this file and
  redefine symbols. This is not prefect but this the best solution I found for a
  compilation time jpeg option.

2004-10-13 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
  * Update jpeg ijg lib to support lossless jpeg implementation
    For more info look in jpeg/libijg/README.GDCM.txt for necessary steps to
    reproduce at home.
  * Also added a special copyright for dcmtk since we use their bugfixes.
  Thanks dcmtk crew !

2004-10-13 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * Doc/Website/MailingList.html added (Sidebar.html changed accordingly).
  * gdcmPython/gdcm.i: fix for compilation of wrappers (Note: %include order
    matters, as stated in warning note at begining of %include section).
  * src/gdcmDicomDir*.[cxx|h]: coding style
  * src/gdcmDocument.h: doxygen \ref seems uncompatible with \todo.
  * src/gdcmJpeg8.cxx: doxygen fix.
  * CLEANUP_ROUND (12) for gdcmPixelConvert (seing the ligth stage)
    src/gdcmFile.[cxx|h] and gdcmPixelConvert.[cxx|h]: color handling moved